--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.2.1",
+    "country-language": "^0.1.7",
     "i18next-client": "^1.11.4",
+    "material-ui": "^0.20.0",
     "moment": "^2.21.0",
     "opening_hours": "^3.5.0",
     "react": "^16.2.0",
