--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
-    "typeface-open-sans": "0.0.54"
+    "typeface-open-sans": "0.0.54",
+    "yahoo-weather": "^2.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
