--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "opening_hours": "^3.5.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-icons-weather": "^1.0.5",
     "react-scripts": "1.1.1",
     "typeface-open-sans": "0.0.54",
     "yahoo-weather": "^2.2.2"
