--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,9 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
+# Dotenv environment variables file
 .env
+
+# Build
+build 
 
