--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "react": "16.3.0-alpha.1",
     "react-native": "^0.54.4",
     "react-native-hr": "^1.1.4",
-    "react-native-iphone-x-helper": "^1.0.2"
+    "react-native-iphone-x-helper": "^1.0.2",
+    "react-native-vector-icons": "^4.6.0"
   }
 }
